2007-03-21  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Beth Dakin.
        
        Added fuzz tester for the length list parser.

        * svg/dom/length-list-parser-expected.txt: Added.
        * svg/dom/length-list-parser.html: Added.

2007-03-21  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Beth Dakin.
        
        Factored randomizing functions into their own file, in preparation for future
        tests that rely on them.
        
        * svg/dom/resources/scripted-random.js: Added.
        * svg/dom/transform-parser.html: Factored out scripted-random.js, added
        a small string that increases the normal-seemingness of the last test.

2007-03-21  Timothy Hatcher  <timothy@apple.com>

        New results after rolling out r19828 in r20352.

        * fast/overflow/scrollRevealButton-expected.checksum:
        * fast/overflow/scrollRevealButton-expected.png:
        * fast/overflow/scrollRevealButton-expected.txt:

2007-03-21  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by oliver
        
        <rdar://problem/5075944> 
        REGRESSION: Partially selected underlined content pastes as plain text

        Tests for the bug:
        * editing/pasteboard/5075944-expected.checksum: Added.
        * editing/pasteboard/5075944-expected.png: Added.
        * editing/pasteboard/5075944-expected.txt: Added.
        * editing/pasteboard/5075944.html: Added.
        Tests that the element that has the text-decoration
        and all its descendants down to the common ancestor
        are included in the copied markup (instead of the
        text-decoration property being treated as though it
        were inheritable and placed on the style span wrapper):
        * editing/pasteboard/5075944-2-expected.checksum: Added.
        * editing/pasteboard/5075944-2-expected.png: Added.
        * editing/pasteboard/5075944-2-expected.txt: Added.
        * editing/pasteboard/5075944-2.html: Added.